# nemosine-10-MiND

./: .gitignore  README.md  mind_autotest.py  mind_autotest2.py  paper.bib  paper.md  pyproject.toml
mind_test_runs/run_1/: fingerprint.json  stderr.txt
mind_test_runs/run_2/: fingerprint.json  input.json
src/backend/: main.py  requirements.txt
src/backend/ame/: models.py  orchestrator.py
src/backend/runtime/: cycles.jsonl
src/nemosine_mind/: __main__.py  main.py
src/nemosine_mind/ame/: __init__.py  config.py  input_handler.py  motor_openai.py  registry.py
src/nemosine_mind/runtime/: cycles.jsonl
