[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemosine-mind"
version = "1.0.1"
description = "MiND: A Minimal Deterministic Middleware for Auditing, Reproducing, and Logging Large Language Model Interactions in Research Workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU General Public License v3.0 only" }
authors = [
  { name = "Edervaldo José de Souza Melo" }
]
keywords = [
  "deterministic middleware",
  "reproducible AI",
  "LLM auditing",
  "logging",
  "research software"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "openai>=1.40"
]

[project.urls]
Homepage = "https://github.com/edersouzamelo/nemosine-10-MiND"
Repository = "https://github.com/edersouzamelo/nemosine-10-MiND"
Documentation = "https://github.com/edersouzamelo/nemosine-10-MiND"
Archive = "https://doi.org/10.5281/zenodo.18637799"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nemosine_mind*"]
